--- a/views/game.html
+++ b/views/game.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-	<canvas id="gameCanvas" height="1049" width="587">
+	<canvas id="backgroundCanvas">
 	Sorry, but your browser does not support the HTML5 canvas tag.
 	</canvas>
 
