--- a/views/game.html
+++ b/views/game.html
@@ -9,5 +9,10 @@
 
 </body>
 
-<script src="../res/src/game.js"></script>
+<script src="../res/src/GameObject.js"></script>
+<script src="../res/src/VisualGameObject.js"></script>
+<script src="../res/src/Utils.js"></script>
+<script src="../res/src/ApplicationManager.js"></script>
+<script src="../res/src/GameObjectManager.js"></script>
+<script src="../res/src/main.js"></script>
 </html>
