--- a/views/game.html
+++ b/views/game.html
@@ -11,8 +11,10 @@
 
 <script src="../res/src/GameObject.js"></script>
 <script src="../res/src/VisualGameObject.js"></script>
+<script src="../res/src/AnimatedGameObject.js"></script>
+<script src="../res/src/submarine.js"></script>
 <script src="../res/src/Utils.js"></script>
 <script src="../res/src/ApplicationManager.js"></script>
-<script src="../res/src/GameObjectManager.js"></script>
+<script src="../res/src/gameobjectmanager.js"></script>
 <script src="../res/src/main.js"></script>
 </html>
