--- a/views/game.html
+++ b/views/game.html
@@ -5,6 +5,13 @@
 <link href="../res/bootstrap/css/bootstrap.css" rel="stylesheet">
 <link href="../res/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
+<style type="text/css">
+    body {
+        background-color:black;
+        color:white;
+    }
+</style>
+
 <body>
 <div class="container-fluid">
     <div class="row-fluid">
@@ -17,8 +24,7 @@
     </div>
 
     <div class="span6">
-        <iframe src="1.html" id="infoIframe">
-        Sorry, but your browser does not support the HTML5 canvas tag.
+        <iframe src="wikitemplate.html" id="infoIframe">
         </iframe>
     </div>
     </div>
