--- a/views/game.html
+++ b/views/game.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="span6">
-        <iframe src="wikitemplate.html" id="infoIframe">
+        <iframe id="infoIframe">
         </iframe>
     </div>
     </div>
